Static map, padding fix on #coming_soon_wrapper
so that it doesn't look weird in mobile mode.

--- a/less/style.less
+++ b/less/style.less
@@ -284,6 +284,10 @@ section > p > a {
   text-align: center;
 }
 
+#coming_soon_wrapper {
+  margin: 32px 0 0 0;
+}
+
 #previewday {
   font-size: 3.6rem;
   font-family: 'Victorian Parlor Vintage';
